@startuml
title Diagramme de classes - Sprint 4
left to right direction
hide circle
skinparam shadowing false
skinparam classAttributeIconSize 0

class Athlete {
  +id: number
  +userId: number
  +sport?: string
  +goals?: string
  +experienceLevel?: string
  +fitnessLevel?: string
  +joinedDate: Date
  +completeProfile()
  +updateMetrics()
  +consultDashboard()
}

class NutritionistProfile {
  +id: uuid
  +userId: number
  +bio?: string
  +experience_years: number
  +rating: number
  +specializations?: string[]
  +updateProfile()
  +createDietPlan()
  +monitorCompliance()
}

class DietaryProfile {
  +id: uuid
  +athleteId: number
  +bmr?: number
  +tdee?: number
  +targetCalories?: number
  +allergies?: string[]
  +calculateTargets()
}

class DietPlan {
  +id: uuid
  +name: string
  +goal: enum
  +isTemplate: boolean
  +athleteId?: number
  +startDate?: string
  +create()
  +build()
  +assign()
  +delete()
}

class DietDay {
  +id: uuid
  +dietPlanId: uuid
  +day_number: number
  +title?: string
  +isRestDay: boolean
}

class Meal {
  +id: uuid
  +dietDayId: uuid
  +mealType: enum
  +timeOfDay: string
  +calories: number
  +protein: number
  +carbs: number
  +fats: number
}

class MealLog {
  +id: uuid
  +athleteId: number
  +foodName: string
  +calories: number
  +protein: number
  +carbs: number
  +fats: number
  +loggedAt: Date
  +logMeal()
  +deleteLog()
}

class DietLog {
  +id: uuid
  +athleteId: number
  +dietPlanId?: uuid
  +date: string
  +isCompleted: boolean
  +totalCaloriesConsumed: number
  +computeCompliance()
}

class Goal {
  +id: number
  +athleteId: number
  +name: string
  +targetValue?: number
  +currentValue?: number
  +status: string
  +create()
  +updateProgress()
  +close()
}

class BodyMetric {
  +id: number
  +athleteId: number
  +date: Date
  +weight?: decimal
  +bodyFat?: decimal
  +vo2max?: decimal
  +addMetric()
}

Athlete "1" --> "0..*" BodyMetric : mesure
Athlete "1" --> "0..*" Goal : poursuit
Athlete "1" --> "0..1" DietaryProfile : configure
NutritionistProfile "1" --> "0..*" DietPlan : élabore
Athlete "1" --> "0..*" DietPlan : suit
DietPlan "1" --> "1..*" DietDay : organise
DietDay "1" --> "1..*" Meal : planifie
Athlete "1" --> "0..*" MealLog : journalise
DietPlan "1" --> "0..*" DietLog : contrôle
@enduml
